fixing dark mode

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,7 +4,7 @@
   text-decoration: none;
 }
 .app {
-  height: 100%;
+  height: 100vh;
   background-color: #f9f9f9;
   .app__header {
     display: flex;
